--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
   <main>
     <ul class="produtos">
         <li>
-          <h2>Cabelo</h2>
-          <img src="cabelo.jpg">
-          <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-          <p class="produto-preco">R$ 25,00</p>
+          <h2>Guitarra Stratocaster</h2>
+          <img src="guitar.png">
+          <p class="produto-descricao">Com captadores de última geração, é perfeita para você tocar aquele rock!</p>
+          <p class="produto-preco">R$ 999,90</p>
       </li>
       <li>
-          <h2>Barba</h2>
-          <img src="barba.jpg">
-          <p class="produto-descricao">Corte e desenho profissional de barba</p>
-          <p class="produto-preco">R$ 18,00</p>
+          <h2>Teclado de 5 oitavas</h2>
+          <img src="teclado.png">
+          <p class="produto-descricao">Equipado com um sistema de teclas sensitivas e com mais de 300 efeitos, é perfeito para fazer harmonias melódicas!</p>
+          <p class="produto-preco">R$ 1099,00</p>
       </li>
       <li>
-          <h2>Cabelo + Barba</h2>
-          <img src="cabelo+barba.jpg">
-          <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-          <p class="produto-preco">R$ 35,00</p>
+          <h2>Pandeiro Classic</h2>
+          <img src="pandeiro.jpg">
+          <p class="produto-descricao">Pra você que quer tocar aquele samba, esse é o instrumento perfeito!</p>
+          <p class="produto-preco">R$ 99,90</p>
       </li>
   </ul>
 </main>
 
     <footer>
-      <img src="logo-branco.png">
+      <img src="logo.png">
       <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
   </body>
