--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Produtos - Music Shop Instrumentos Musicais</title>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -38,7 +38,7 @@
       </li>
       <li>
           <h2>Pandeiro Classic</h2>
-          <img src="pandeiro.jpg">
+          <img src="pandeiro.png">
           <p class="produto-descricao">Pra você que quer tocar aquele samba, esse é o instrumento perfeito!</p>
           <p class="produto-preco">R$ 99,90</p>
       </li>
@@ -47,7 +47,7 @@
 
     <footer>
       <img src="logo.png">
-      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+      <p class="copyright">&copy; Copyright Music Shop - 2023</p>
     </footer>
   </body>
 </html>
