--- a/contato.html
+++ b/contato.html
@@ -14,15 +14,15 @@
   
         <nav>
           <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="produtos.html">Produtos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-    </div>
-  </header>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   
-   <main>
+    <main>
     <form>
       <label for="nomesobrenome">Nome e sobrenome</label>
       <input type="text" id="nomesobrenome" class="input-padrao" required>
@@ -57,6 +57,21 @@
       <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
       <input type="submit" value="Enviar formulário">
     </form>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Dia</th>
+          <th>Horário</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Segunda</td>
+          <td>8h-20h</td>
+        </tr>
+      </tbody>
+    </table>
   </main>
 
   <footer>
